<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.practicadatos.omar.tlahuac.practica_datos.MainActivity"
    android:weightSum="1">
<!-- TÍTULO DE LA ACTIVIDAD -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"/>
<!-- LINEAR DEL NOMBRE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/txtnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.334" />

        <EditText
            android:id="@+id/etnombre"
            android:layout_width="239dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>
<!-- LINEAR DE DIRECCION -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtdireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.334" />

        <EditText
            android:id="@+id/etdireccion"
            android:layout_width="239dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
<!-- LINEAR DE TELEFONO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txttel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.334" />

        <EditText
            android:id="@+id/ettel"
            android:layout_width="239dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
<!-- BOTON PARA EL CALENDARIO -->
    <Button
        android:id="@+id/btnfecha"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendario" />
<!-- EDIT TEXT PARA LA FECHA -->
    <EditText
        android:id="@+id/etfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnenviar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />


</LinearLayout>
